// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must generate for styled block with empty decorator 1`] = `
Immutable.List [
  Immutable.Record {
    "start": 0,
    "end": 10,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 4,
      },
      Immutable.Record {
        "start": 4,
        "end": 8,
      },
      Immutable.Record {
        "start": 8,
        "end": 10,
      },
    ],
  },
]
`;

exports[`must generate for styled block with empty decorator 2`] = `".3"`;

exports[`must generate for styled block with multiple decorators 1`] = `
Immutable.List [
  Immutable.Record {
    "start": 0,
    "end": 3,
    "decoratorKey": "y",
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
      },
    ],
  },
  Immutable.Record {
    "start": 3,
    "end": 6,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 3,
        "end": 4,
      },
      Immutable.Record {
        "start": 4,
        "end": 6,
      },
    ],
  },
  Immutable.Record {
    "start": 6,
    "end": 10,
    "decoratorKey": "z",
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 6,
        "end": 8,
      },
      Immutable.Record {
        "start": 8,
        "end": 10,
      },
    ],
  },
]
`;

exports[`must generate for styled block with multiple decorators 2`] = `"y.3.1-.2-z.4.2"`;

exports[`must generate for styled block with single decorator 1`] = `
Immutable.List [
  Immutable.Record {
    "start": 0,
    "end": 3,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
      },
    ],
  },
  Immutable.Record {
    "start": 3,
    "end": 6,
    "decoratorKey": "x",
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 3,
        "end": 4,
      },
      Immutable.Record {
        "start": 4,
        "end": 6,
      },
    ],
  },
  Immutable.Record {
    "start": 6,
    "end": 10,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 6,
        "end": 8,
      },
      Immutable.Record {
        "start": 8,
        "end": 10,
      },
    ],
  },
]
`;

exports[`must generate for styled block with single decorator 2`] = `".1-x.3.2-.2"`;

exports[`must generate for unstyled block with emtpy decorator 1`] = `
Immutable.List [
  Immutable.Record {
    "start": 0,
    "end": 7,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 7,
      },
    ],
  },
]
`;

exports[`must generate for unstyled block with emtpy decorator 2`] = `".1"`;

exports[`must generate for unstyled block with multiple decorators 1`] = `
Immutable.List [
  Immutable.Record {
    "start": 0,
    "end": 3,
    "decoratorKey": "y",
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
      },
    ],
  },
  Immutable.Record {
    "start": 3,
    "end": 6,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 3,
        "end": 6,
      },
    ],
  },
  Immutable.Record {
    "start": 6,
    "end": 7,
    "decoratorKey": "z",
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 6,
        "end": 7,
      },
    ],
  },
]
`;

exports[`must generate for unstyled block with multiple decorators 2`] = `"y.3.1-.1-z.1.1"`;

exports[`must generate for unstyled block with single decorator 1`] = `
Immutable.List [
  Immutable.Record {
    "start": 0,
    "end": 3,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 0,
        "end": 3,
      },
    ],
  },
  Immutable.Record {
    "start": 3,
    "end": 6,
    "decoratorKey": "x",
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 3,
        "end": 6,
      },
    ],
  },
  Immutable.Record {
    "start": 6,
    "end": 7,
    "decoratorKey": null,
    "leaves": Immutable.List [
      Immutable.Record {
        "start": 6,
        "end": 7,
      },
    ],
  },
]
`;

exports[`must generate for unstyled block with single decorator 2`] = `".1-x.3.1-.1"`;
